# MoriaAdvancedBuilder

./: .gitignore  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v7.0.0.md  compile_commands.json
MyCPPMods/: CMakeLists.txt
MyCPPMods/MoriaCppMod/: CMakeLists.txt  DEVELOPER_GUIDE.md  removed_instances.txt.bak
MyCPPMods/MoriaCppMod/docs/: cleanup-2026-05-05.md
MyCPPMods/MoriaCppMod/localization/: en.json
MyCPPMods/MoriaCppMod/src/: dllmain.cpp  dllmain.cpp.bak-v1.0-stable  dllmain.cpp.bak-v1.1-rotation  dllmain.cpp.bak-v1.4-quickbuild  dllmain.cpp.bak-v1.5-chathotbar  moria_DefinitionProcessing.inl  moria_advanced_join_ui.inl  moria_common.h  moria_common.inl  moria_datatable.inl  moria_debug.inl  moria_dualsense.h  moria_hism.inl  moria_inventory.inl  moria_join_assets.h  moria_join_world_ui.inl  moria_keybinds.h  moria_npc_recovery.inl  moria_overlay.cpp  moria_overlay_mgmt.inl  moria_placement.inl  moria_quickbuild.inl  moria_reflection.h  moria_session_history.inl  moria_settings_ui.inl  moria_stability.inl  moria_testable.h  moria_unlock.inl  moria_widget_harvest.inl  moria_widgets.inl
MyCPPMods/MoriaCppMod/tests/: CMakeLists.txt  test_file_io.cpp  test_key_helpers.cpp  test_loc.cpp  test_memory.cpp  test_string_helpers.cpp
definitions/: Build Anywhere.ini  Clean Fat Stacks.ini  Durable Armors.ini  Durable Tools.ini  Durable Weapons.ini  Earlier Elven Farmbox.ini  Epic Packs Everywhere.ini  Fast Monuments.ini  Fat Loot.ini  Fat Storage.ini  Fat Trade.ini  Free Building.ini  Longer Buff Duration.ini  Mental Stability.ini  (+4 more)
docs/: debug.md  (+12 more)
(+106 files in other folders)
